[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "pycrosaccade"
authors = [
    {name = "Robbert van der Mijn", email = "robbertmijn@gmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.5"
dynamic = ["version", "description"]
dependencies = [
    "python-datamatrix",
    "numpy"
]
[project.urls]
Documentation = "https://github.com/robbertmijn/pycrosaccade"
Source = "https://github.com/robbertmijn/pycrosaccade"